--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@railway/cli": "^2.0.13",
-		"@types/jsonwebtoken": "^8.5.9",
 		"bcrypt": "^5.1.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -21,12 +19,13 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.8.0",
-		"multer": "^1.4.5-lts.1",
-		"mysql2": "^2.3.3"
+		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
+		"@types/jsonwebtoken": "^8.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"eslint": "^8.29.0",
