--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc -p .",
-		"start": "node ./src/server.js",
+		"start": "node ./dist/server.js",
 		"dev": "tsnd --transpile-only --ignore-watch node_modules ./src/server.ts",
 		"test": "jest --maxWorkers=50%",
 		"test:watch": "jest --watch --maxWorkers=25%"
