--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
+		"@jest-mock/express": "^2.0.1",
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
