--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^8.5.9",
+		"@types/multer": "^1.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"eslint": "^8.29.0",
