--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
+		"moment": "^2.29.4",
 		"mongoose": "^6.8.0",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.8.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
@@ -35,6 +37,7 @@
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/multer": "^1.4.7",
+		"@types/nodemailer": "^6.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"eslint": "^8.29.0",
