--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^8.5.9",
+		"@types/moment": "^2.13.0",
 		"@types/multer": "^1.4.7",
 		"@types/nodemailer": "^6.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
