chore: updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT=
-MONGO_URL=
-API_CONSUMER_URL=
-API_SECRET=
-NODE_MAILER_EMAIL=
-NODE_MAILER_PASSWORD=
+PORT=PORT_NUMBER
+MONGO_URL=mongodb+srv://<USER>:<PASSWORD>@sgcluster0.lznfyhf.mongodb.net/<DB>?retryWrites=true&w=majority
+API_CONSUMER_URL=FRONT_END_LINK_FOR_CORS
+API_SECRET=JWT_SECRET
+NODE_MAILER_EMAIL=YOUR_EMAIL_HERE
+NODE_MAILER_PASSWORD=YOUR_2_FACTORY_PASSWORD
